Fixed the images breaking on page load. They were too large, so I shrunk them a tad, and boom, fixed.

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -157,7 +157,7 @@ strong {
 	font-family: 'Montserrat', sans-serif;	
 }
 #twoButtonPush{
-	padding-left:200px;
+	padding-left:280px;
 	padding-right:10px;
 }
 #orphanHero{
